--- a/Web/NbuReservationSystem.Web/Web.config
+++ b/Web/NbuReservationSystem.Web/Web.config
@@ -14,8 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="RouteDebugger:Enabled" value="false" />
-    <add key="Email" value=""/>
-    <add key="Password" value=""/>
+    <add key="Email" value="nbureservationsystem@gmail.com" />
+    <add key="Password" value="NBUsystem1~" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
