--- a/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
+++ b/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
@@ -181,35 +181,35 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_GlobalResources\Account\AccountLabels.Designer.cs">
+    <Compile Include="App_GlobalResources\Labels\AccountLabels.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AccountLabels.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Account\AccountLabels.en.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\AccountLabels.en.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AccountLabels.en.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Administration\AdministrationLabels.Designer.cs">
+    <Compile Include="App_GlobalResources\Labels\AdministrationLabels.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AdministrationLabels.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Administration\AdministrationLabels.en.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\AdministrationLabels.en.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AdministrationLabels.en.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Buttons.Designer.cs">
+    <Compile Include="App_GlobalResources\Labels\ButtonsLabels.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Buttons.resx</DependentUpon>
+      <DependentUpon>ButtonsLabels.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Buttons.en.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\ButtonsLabels.en.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Buttons.en.resx</DependentUpon>
+      <DependentUpon>ButtonsLabels.en.resx</DependentUpon>
     </Compile>
     <Compile Include="App_GlobalResources\Reservations\ErrorMessages.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -221,15 +221,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ErrorMessages.en.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Reservations\Labels.en.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\Reservations.en.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Labels.en.resx</DependentUpon>
+      <DependentUpon>Reservations.en.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Reservations\Labels.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\ReservationsLabels.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Labels.resx</DependentUpon>
+      <DependentUpon>ReservationsLabels.resx</DependentUpon>
     </Compile>
     <Compile Include="App_GlobalResources\Reservations\Months.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -271,17 +271,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\Account\ExternalLoginConfirmationViewModel.cs" />
-    <Compile Include="ViewModels\Account\ForgotPasswordViewModel.cs" />
-    <Compile Include="ViewModels\Account\ExternalLoginListViewModel.cs" />
-    <Compile Include="ViewModels\Account\LoginViewModel.cs" />
-    <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
-    <Compile Include="ViewModels\Account\ResetPasswordViewModel.cs" />
-    <Compile Include="ViewModels\Manage\ChangePasswordViewModel.cs" />
-    <Compile Include="ViewModels\Manage\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\Manage\SetPasswordViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\ForgottenPassword.txt" />
@@ -578,9 +569,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
@@ -654,9 +642,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_GlobalResources\Reservations\Labels.en.resx">
+    <Content Include="App_GlobalResources\Labels\Reservations.en.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Labels.en.designer.cs</LastGenOutput>
+      <LastGenOutput>Reservations.en.designer.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -673,38 +661,38 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_GlobalResources\Administration\AdministrationLabels.resx">
+    <Content Include="App_GlobalResources\Labels\AdministrationLabels.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
       <LastGenOutput>AdministrationLabels.Designer.cs</LastGenOutput>
     </Content>
-    <Content Include="App_GlobalResources\Administration\AdministrationLabels.en.resx">
+    <Content Include="App_GlobalResources\Labels\AdministrationLabels.en.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
       <LastGenOutput>AdministrationLabels.en.designer.cs</LastGenOutput>
     </Content>
-    <EmbeddedResource Include="App_GlobalResources\Account\AccountLabels.en.resx">
+    <EmbeddedResource Include="App_GlobalResources\Labels\AccountLabels.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AccountLabels.en.designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="App_GlobalResources\Account\AccountLabels.resx">
+    <EmbeddedResource Include="App_GlobalResources\Labels\AccountLabels.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AccountLabels.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Content Include="App_GlobalResources\Buttons.resx">
-      <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Buttons.Designer.cs</LastGenOutput>
-    </Content>
-    <Content Include="App_GlobalResources\Buttons.en.resx">
-      <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Buttons.en.designer.cs</LastGenOutput>
-    </Content>
+    <EmbeddedResource Include="App_GlobalResources\Labels\ButtonsLabels.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ButtonsLabels.designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\Labels\ButtonsLabels.en.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ButtonsLabels.en.designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="App_GlobalResources\Reservations\ErrorMessages.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Content Include="App_GlobalResources\Reservations\Labels.resx">
+    <Content Include="App_GlobalResources\Labels\ReservationsLabels.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Labels2.designer.cs</LastGenOutput>
+      <LastGenOutput>ReservationsLabels.designer.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
