--- a/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
+++ b/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
@@ -181,15 +181,35 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_GlobalResources\Administration\AdministrationLabels.Designer.cs">
+    <Compile Include="App_GlobalResources\Labels\AccountLabels.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AccountLabels.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\Labels\AccountLabels.en.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AccountLabels.en.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\Labels\AdministrationLabels.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AdministrationLabels.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Administration\AdministrationLabels.en.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\AdministrationLabels.en.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AdministrationLabels.en.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\Labels\ButtonsLabels.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ButtonsLabels.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\Labels\ButtonsLabels.en.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ButtonsLabels.en.resx</DependentUpon>
     </Compile>
     <Compile Include="App_GlobalResources\Home\IndexContent.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -211,15 +231,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ErrorMessages.en.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Reservations\Labels.en.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\Reservations.en.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Labels.en.resx</DependentUpon>
+      <DependentUpon>Reservations.en.resx</DependentUpon>
     </Compile>
-    <Compile Include="App_GlobalResources\Reservations\Labels.designer.cs">
+    <Compile Include="App_GlobalResources\Labels\ReservationsLabels.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Labels.resx</DependentUpon>
+      <DependentUpon>ReservationsLabels.resx</DependentUpon>
     </Compile>
     <Compile Include="App_GlobalResources\Reservations\Months.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -261,20 +281,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\Account\ExternalLoginConfirmationViewModel.cs" />
-    <Compile Include="ViewModels\Account\ForgotPasswordViewModel.cs" />
-    <Compile Include="ViewModels\Account\ExternalLoginListViewModel.cs" />
-    <Compile Include="ViewModels\Account\LoginViewModel.cs" />
-    <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
-    <Compile Include="ViewModels\Account\ResetPasswordViewModel.cs" />
-    <Compile Include="ViewModels\Manage\ChangePasswordViewModel.cs" />
-    <Compile Include="ViewModels\Manage\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\Manage\SetPasswordViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Email.txt" />
+    <Content Include="App_Data\ForgottenPassword.txt" />
+    <Content Include="App_Data\NewReservation.txt" />
     <Content Include="App_Data\ToS.txt" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -794,10 +806,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
@@ -805,7 +813,6 @@
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
-    <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Reservations\Index.cshtml" />
@@ -820,7 +827,6 @@
   <ItemGroup>
     <Folder Include="Areas\Administration\Models\" />
     <Folder Include="Areas\Administration\Views\Shared\" />
-    <Folder Include="ViewModels\Home\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -873,9 +879,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_GlobalResources\Reservations\Labels.en.resx">
+    <Content Include="App_GlobalResources\Labels\Reservations.en.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Labels.en.designer.cs</LastGenOutput>
+      <LastGenOutput>Reservations.en.designer.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -892,14 +898,31 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_GlobalResources\Administration\AdministrationLabels.resx">
+    <Content Include="App_GlobalResources\Labels\AdministrationLabels.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
       <LastGenOutput>AdministrationLabels.Designer.cs</LastGenOutput>
     </Content>
-    <Content Include="App_GlobalResources\Administration\AdministrationLabels.en.resx">
+    <Content Include="App_GlobalResources\Labels\AdministrationLabels.en.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
       <LastGenOutput>AdministrationLabels.en.designer.cs</LastGenOutput>
     </Content>
+    <EmbeddedResource Include="App_GlobalResources\Labels\AccountLabels.en.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>AccountLabels.en.designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\Labels\AccountLabels.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>AccountLabels.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\Labels\ButtonsLabels.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ButtonsLabels.designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\Labels\ButtonsLabels.en.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ButtonsLabels.en.designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="App_GlobalResources\Home\IndexContent.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>IndexContent.en.designer.cs</LastGenOutput>
@@ -912,9 +935,9 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Content Include="App_GlobalResources\Reservations\Labels.resx">
+    <Content Include="App_GlobalResources\Labels\ReservationsLabels.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Labels2.designer.cs</LastGenOutput>
+      <LastGenOutput>ReservationsLabels.designer.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
