Added Halls. Fixed an issue with localization resources (bad custom tool and build action)

--- a/Data/NbuReservationSystem.Data.Models/NbuReservationSystem.Data.Models.csproj
+++ b/Data/NbuReservationSystem.Data.Models/NbuReservationSystem.Data.Models.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Hall.cs" />
     <Compile Include="Organizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservation.cs" />
