Prtially integrated halls: - they are now part of the new reservation form - backend verifies that the hall is free - hall name and color are required db fields - removed old index, built on top of reservation date, start hour and end hour - added hall to organizer entity - migrations cleanup - added bootstrap-select lib

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@
 ####### Project-specific files
 
 Web/NbuReservationSystem.Web/Content/DataTables/
+Web/NbuReservationSystem.Web/Content/bootstrap-select*
+
 Web/NbuReservationSystem.Web/Scripts/DataTables/
+Web/NbuReservationSystem.Web/Scripts/bootstrap-select*
+Web/NbuReservationSystem.Web/Scripts/i18n/
 
 #######
 
