--- a/Web/NbuReservationSystem.Web/packages.config
+++ b/Web/NbuReservationSystem.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
   <package id="AutoMapper" version="4.2.0" targetFramework="net46" />
   <package id="bootstrap.less" version="3.3.5" targetFramework="net46" />
+  <package id="bootstrap-select" version="1.12.1" targetFramework="net46" />
   <package id="datatables.net" version="1.10.13" targetFramework="net46" />
   <package id="dotless" version="1.5.2" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
