--- a/Web/NbuReservationSystem.Web/packages.config
+++ b/Web/NbuReservationSystem.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.9.4" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
